@@ -128,6 +128,8 @@ void ags_jack_devout_set_delay_factor(AgsSoundcard *soundcard,
 				      gdouble delay_factor);
 gdouble ags_jack_devout_get_delay_factor(AgsSoundcard *soundcard);
 
+gdouble ags_jack_devout_get_absolute_delay(AgsSoundcard *soundcard);
+
 gdouble ags_jack_devout_get_delay(AgsSoundcard *soundcard);
 guint ags_jack_devout_get_attack(AgsSoundcard *soundcard);
 
@@ -536,6 +538,8 @@ ags_jack_devout_soundcard_interface_init(AgsSoundcardInterface *soundcard)
   soundcard->set_delay_factor = ags_jack_devout_set_delay_factor;
   soundcard->get_delay_factor = ags_jack_devout_get_delay_factor;
   
+  soundcard->get_absolute_delay = ags_jack_devout_get_absolute_delay;
+
   soundcard->get_delay = ags_jack_devout_get_delay;
   soundcard->get_attack = ags_jack_devout_get_attack;
 
@@ -1482,7 +1486,7 @@ ags_jack_devout_get_uptime(AgsSoundcard *soundcard)
     delay_factor = ags_soundcard_get_delay_factor(soundcard);
 
     /* calculate delays */
-    delay = ((gdouble) samplerate / (gdouble) buffer_size) * (gdouble)(60.0 / bpm) * delay_factor;
+    delay = ags_soundcard_get_absolute_delay(soundcard);
   
     uptime = ags_time_get_uptime_from_offset(note_offset,
 					     bpm,
@@ -1934,6 +1938,16 @@ ags_jack_devout_get_delay_factor(AgsSoundcard *soundcard)
 }
 
 gdouble
+ags_jack_devout_get_absolute_delay(AgsSoundcard *soundcard)
+{
+  AgsJackDevout *jack_devout;
+  
+  jack_devout = AGS_JACK_DEVOUT(soundcard);
+  
+  return((60.0 * (((gdouble) jack_devout->samplerate / (gdouble) jack_devout->buffer_size) / (gdouble) jack_devout->bpm) * ((1.0 / 16.0) * (1.0 / (gdouble) jack_devout->delay_factor))));
+}
+
+gdouble
 ags_jack_devout_get_delay(AgsSoundcard *soundcard)
 {
   AgsJackDevout *jack_devout;
@@ -2099,7 +2113,7 @@ ags_jack_devout_adjust_delay_and_attack(AgsJackDevout *jack_devout)
     return;
   }
   
-  delay = (60.0 * (((gdouble) jack_devout->samplerate / (gdouble) jack_devout->buffer_size) / (gdouble) jack_devout->bpm) * ((1.0 / 16.0) * (1.0 / (gdouble) jack_devout->delay_factor)));
+  delay = ags_soundcard_get_absolute_delay(AGS_SOUNDCARD(jack_devout));
 
 #ifdef AGS_DEBUG
   g_message("delay : %f\0", delay);
